# SafetyNets

./: .gitignore  CMakeCache.txt  CMakeLists.txt  Makefile  README.md  W_conv1.ckpt.data-00000-of-00001  ann.cpp  ann.h  ann_eval  ann_eval.cpp  ann_tester  ann_tester.cpp  biases_0  biases_1  cipherarrival  client_demo  client_demo.cpp  client_test.cpp  cmake_install.cmake  cnn_sunny.cpp  compare  compare.cpp  crtconv  crtconv.cpp  deep.cpp  deep.h  deep_w0  deep_w1  deep_w2  demo  demo.cpp  encNN  encNN.cpp  encconv  encconv.cpp  order_flip  order_flip.cpp  paramsarrival  plainconv  plainconv.cpp  (+38 more)
MNIST_data/: .t10k-images-idx3-ubyte.gz.icloud
drawing/: image  paint.py
